Mudanças About.html

--- a/About.html
+++ b/About.html
@@ -58,23 +58,50 @@
             <h1><i class="fa fa-users" aria-hidden="true"></i> Sobre Nós <small>Conheça a gente</small></h1>
         </div>
         <!--Fim cabeçalho-->
-        <p>
-        Biblioteca Virtual do Amor Genuíno é um projeto da disciplina de Direitos Humanos e Multi-Culturalismo
-        <br/>O projeto foi desenvolvido pelos alunos:
-        <ul>
-          <li>Allan Portes</li>
-          <li>Isabela Karina Vilas Boas</li>
-          <li>Henrique Fiorenzi</li>
-          <li>Matheus Anido</li>
-          <li>Thales Maziero</li>
-          <li>Yasmin Fernandes</li>
-        </ul>
-        </p>
+        <p>O projeto foi desenvolvido pelos seguintes alunos da disciplina de Direitos Humanos e Multi-Culturalismo:</p>
+        <div class="col-lg-2 centered">
+            <img class="img img-circle" src="Picture/allan.jpg" height="120px" width="120px" alt="">
+            <br>
+            <h4><b>Allan Portes</b></h4>
+            <p></p>
+        </div>
+        <div class="col-lg-2 centered">
+            <img class="img img-circle" src="Picture/isa.jpg" height="120px" width="120px" alt="">
+            <br>
+            <h4><b>Isabela Karina Vilas Boas</b></h4>
+            <p></p>
+        </div>
+        <div class="col-lg-2 centered">
+            <img class="img img-circle" src="Picture/grosi.jpg" height="120px" width="120px" alt="">
+            <br>
+            <h4><b>Henrique Fiorenzi</b></h4>
+            <p></p>
+        </div>
+        <div class="col-lg-2 centered">
+            <img class="img img-circle" src="Picture/math.jpg" height="120px" width="120px" alt="">
+            <br>
+            <h4><b>Matheus Anido</b></h4>
+            <p></p>
+        </div>
+        <div class="col-lg-2 centered">
+            <img class="img img-circle" src="Picture/thales.jpg" height="120px" width="120px" alt="">
+            <br>
+            <h4><b>Thales Maziero</b></h4>
+            <p></p>
+        </div>
+        <div class="col-lg-2 centered">
+            <img class="img img-circle" src="Picture/yasmin.jpg" height="120px" width="120px" alt="">
+            <br>
+            <h4><b>Yasmin Fernandes</b></h4>
+            <p></p>
+        </div>
         <!--Inicio Breadcrumb-->
-        <ol class="breadcrumb">
-            <li><a href="Index.html">Home</a></li>
-            <li class="active">Sobre Nós</li>
-        </ol>
+        <div class="col-lg-12">
+            <ol class="breadcrumb">
+                <li><a href="Index.html">Home</a></li>
+                <li class="active">Sobre Nós</li>
+            </ol>
+        </div>
         <!--Fim Breadcrumb-->
     </div>
     <!--Inicio Rodapé-->
