--- a/Index.html
+++ b/Index.html
@@ -55,8 +55,8 @@
       <!--Inicio Jumbotron-->
       <div class="jumbotron">
         <h1>Biblioteca Virtual do Amor Genuíno</h1>
-        <p></p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        <p><h3>O que é?</h3></p>
+        <p> é um projeto da disciplina de Direitos Humanos e Multi-Culturalismo</p>
       </div>
       <!--Fim Jumbotron-->
 
