--- a/About.html
+++ b/About.html
@@ -6,9 +6,9 @@
     <title>Estante Virtual - Biblioteca</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/cosmo.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!--<link rel="stylesheet" type="text/css" href="css/flatly.css" />-->
 </head>
 
@@ -108,7 +108,7 @@
     <footer>
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container">
-                <p class="navbar-text"> Todos os direitos reservados. <span class="fa fa-copyright" aria-hidden="true"></span> 2016</p>
+                <p class="navbar-text">Estante Virtual do Amor Genuíno. Todos os direitos reservados. <span class="fa fa-copyright" aria-hidden="true"></span> 2016</p>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#" class="pull-right invisible" id="btnUp">
