--- a/Calculo1.html
+++ b/Calculo1.html
@@ -6,9 +6,9 @@
     <title>Estante Virtual - Cálculo 1</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/cosmo.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!--<link rel="stylesheet" type="text/css" href="css/flatly.css" />-->
 </head>
 
@@ -90,7 +90,7 @@
                               <a href="#" class="btn btn-danger btn-xs btn-group" role="button">
                                 <i class="fa fa-heart-o" aria-hidden="true"></i>
                               </a>
-                              <a href="#" class="btn btn-default btn-xs btn-group disabled" role="button"><b>100</b></a>
+                              <a href="#" class="btn btn-default btn-xs btn-group disabled size" role="button"><b>100</b></a>
                               <a href="#" class="btn btn-success btn-xs btn-group" role="button">
                                 <i class="fa fa-heart" aria-hidden="true"></i>
                               </a>
@@ -114,7 +114,7 @@
                               <a href="#" class="btn btn-danger btn-xs btn-group" role="button">
                                 <i class="fa fa-heart-o" aria-hidden="true"></i>
                               </a>
-                              <a href="#" class="btn btn-default btn-xs btn-group disabled" role="button"><b>100</b></a>
+                              <a href="#" class="btn btn-default btn-xs btn-group disabled size" role="button"><b>100</b></a>
                               <a href="#" class="btn btn-success btn-xs btn-group" role="button">
                                 <i class="fa fa-heart" aria-hidden="true"></i>
                               </a>
@@ -122,10 +122,10 @@
                           </td>
                           <td>
                             <a href="#" class="btn btn-default btn-info btn-xs" role="button">
-                              Visualizar <i class="fa fa-search" aria-hidden="true"></i>
+                              <i class="fa fa-search" aria-hidden="true"></i> Visualizar
                             </a>
                             <a href="#" class="btn btn-default btn-success btn-xs" role="button">
-                              Baixar <i class="fa fa-download" aria-hidden="true"></i>
+                              <i class="fa fa-download" aria-hidden="true"></i> Baixar
                             </a>
                           </td>
                         </tr>
@@ -138,7 +138,7 @@
                               <a href="#" class="btn btn-danger btn-xs btn-group" role="button">
                                 <i class="fa fa-heart-o" aria-hidden="true"></i>
                               </a>
-                              <a href="#" class="btn btn-default btn-xs btn-group disabled" role="button"><b>0</b></a>
+                              <a href="#" class="btn btn-default btn-xs btn-group disabled size" role="button"><b>0</b></a>
                               <a href="#" class="btn btn-success btn-xs btn-group" role="button">
                                 <i class="fa fa-heart" aria-hidden="true"></i>
                               </a>
@@ -146,10 +146,10 @@
                           </td>
                           <td>
                             <a href="#" class="btn btn-default btn-info btn-xs" role="button">
-                              Visualizar <i class="fa fa-search" aria-hidden="true"></i>
+                              <i class="fa fa-search" aria-hidden="true"></i> Visualizar
                             </a>
                             <a href="#" class="btn btn-default btn-success btn-xs" role="button">
-                              Baixar <i class="fa fa-download" aria-hidden="true"></i>
+                              <i class="fa fa-download" aria-hidden="true"></i> Baixar
                             </a>
                           </td>
                         </tr>
@@ -162,7 +162,7 @@
                               <a href="#" class="btn btn-danger btn-xs btn-group" role="button">
                                 <i class="fa fa-heart-o" aria-hidden="true"></i>
                               </a>
-                              <a href="#" class="btn btn-default btn-xs btn-group disabled" role="button"><b>99</b></a>
+                              <a href="#" class="btn btn-default btn-xs btn-group disabled size" role="button"><b>99</b></a>
                               <a href="#" class="btn btn-success btn-xs btn-group" role="button">
                                 <i class="fa fa-heart" aria-hidden="true"></i>
                               </a>
@@ -170,10 +170,10 @@
                           </td>
                           <td>
                             <a href="#" class="btn btn-default btn-info btn-xs" role="button">
-                              Visualizar <i class="fa fa-search" aria-hidden="true"></i>
+                              <i class="fa fa-search" aria-hidden="true"></i> Visualizar
                             </a>
                             <a href="#" class="btn btn-default btn-success btn-xs" role="button">
-                              Baixar <i class="fa fa-download" aria-hidden="true"></i>
+                              <i class="fa fa-download" aria-hidden="true"></i> Baixar
                             </a>
                           </td>
                         </tr>
@@ -251,7 +251,7 @@
     <footer>
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container">
-                <p class="navbar-text"> Todos os direitos reservados. <span class="fa fa-copyright" aria-hidden="true"></span> 2016</p>
+                <p class="navbar-text">Estante Virtual do Amor Genuíno. Todos os direitos reservados. <span class="fa fa-copyright" aria-hidden="true"></span> 2016</p>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#" class="pull-right invisible" id="btnUp">
