--- a/Biblioteca.html
+++ b/Biblioteca.html
@@ -6,9 +6,9 @@
     <title>Estante Virtual - Biblioteca</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/cosmo.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!--<link rel="stylesheet" type="text/css" href="css/flatly.css" />-->
 </head>
 
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                <a class="navbar-brand" href="Index.html"><img alt="Brand" class="brand" src="Picture/Icon.svg" /></a>
+                <a class="navbar-brand" href="Index.html"><img alt="Brand" class="brand" src="Picture/Icon.png" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,7 +76,7 @@
     <footer>
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container">
-                <p class="navbar-text"> Todos os direitos reservados. <span class="fa fa-copyright" aria-hidden="true"></span> 2016</p>
+                <p class="navbar-text">Estante Virtual do Amor Genuíno. Todos os direitos reservados. <span class="fa fa-copyright" aria-hidden="true"></span> 2016</p>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#" class="pull-right invisible" id="btnUp">
