--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,9 @@
     <title>Estante Virtual - Home</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/cosmo.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!--<link rel="stylesheet" type="text/css" href="css/flatly.css" />-->
 </head>
 
@@ -54,7 +54,7 @@
     <div class="container">
       <!--Inicio Jumbotron-->
       <div class="jumbotron">
-        <h1>Biblioteca Virtual do Amor Genuíno</h1>
+        <h1>Estante Virtual do Amor Genuíno</h1>
         <p><h3>O que é?</h3></p>
         <p> é um projeto da disciplina de Direitos Humanos e Multi-Culturalismo</p>
       </div>
@@ -70,7 +70,7 @@
     <footer>
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container">
-                <p class="navbar-text"> Todos os direitos reservados. <span class="fa fa-copyright" aria-hidden="true"></span> 2016</p>
+                <p class="navbar-text">Estante Virtual do Amor Genuíno. Todos os direitos reservados. <span class="fa fa-copyright" aria-hidden="true"></span> 2016</p>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#" class="pull-right invisible" id="btnUp">
